--- a/thesis.tex
+++ b/thesis.tex
@@ -118,9 +118,8 @@
 }
 \newpage
 \pagenumbering{arabic}
-%\input{introduction.tex}
 \chapter{Introduction}
-\TODO{I'm still rewriting the introduction.}
+\input{introduction.tex}
 \part{Derivations}
 \input{formalism.tex}
 \input{sks.tex}
