Fixed figure of weakening up/down reduction

--- a/Figures/redAWDAWU.tex
+++ b/Figures/redAWDAWU.tex
@@ -14,22 +14,12 @@
                                 {\scriptstyle      \mathbf1}
                                 {\scriptstyle      \mathbf1}
                                 {\scriptscriptstyle\mathbf1}}}
-\newcommand{\two  }{{\mathchoice{\scriptstyle      \mathbf2}
-                                {\scriptstyle      \mathbf2}
-                                {\scriptstyle      \mathbf2}
-                                {\scriptscriptstyle\mathbf2}}}
 %---------------------------------------
-\afraise{\atomicflow{
-( 0  ,-4)*{\afacu\one{}{}\two{}{}};
-( 0  , 0)*{\afawdnw{}{}};
-(-3.5, 0)*{\invisiblemark};
-( 3.5, 0)*{\invisiblemark}}}
-\quad\to\quad
 \atomicflow{
-(-2  ,-4)*{\afawd{}{}\one{}};
-( 2  ,-4)*{\afawd{}{}{}\two};
-(-3.5, 0)*{\invisiblemark};
-( 3.5, 0)*{\invisiblemark}}
+( 0  ,-2)*{\afawu{}{}{\one}{}};
+( 0  , 2)*{\afawdnw{}{}};
+}
+\quad\to
 \]
 
 \end{document}
