Changed a remark, there is no need to identify the top and bot vertices when taking the union

--- a/atomic_flows.tex
+++ b/atomic_flows.tex
@@ -179,7 +179,7 @@ in the last two diagrams, we also indicated each of the two possible polarity as
 \end{example}
 %------------
 
-\Tom{Changed informal explanation of juxtaposition of flows:}
+\Tom{Changed from what Francois suggested: no need to identify $\top$ and $\bot$ as they are not part of the flow.}
 
 %--------------
 \begin{example}
@@ -187,7 +187,7 @@ The flow
 \[
 \vcenter{\hbox{\includegraphics{Figures/flowExample1}}}\quad,
 \]
-is obtained by juxtaposing (\emph{i.e.}, taking the disjoint sum, identifying $\top$ and $\bot$):
+is obtained by juxtaposing (\emph{i.e.}, taking the disjoint union of):
 \begin{itemize}
 \item three edges, 
 \item a flow obtained by composing a cut vertex with a cocontraction vertex, and
