Added remark about flow isomorphism and checking if a flow is associated with a derivation

--- a/atomic_flows_and_derivations.tex
+++ b/atomic_flows_and_derivations.tex
@@ -337,7 +337,13 @@ whose flow is $\phi$.
 \end{proof}
 %----------
 
-\Tom{Added notation which used to be defined in a previous definition:}
+\Tom{Added remark to further justify the previous Theorem:}
+
+%-------------
+\begin{remark}
+From Proposition~\vref{proposition:FlowUnique} and Theorem~\vref{theorem:SurjectiveDerToFlow} we can conclude that: Given a derivation $\Phi$ and a flow $\phi$, deciding if $\phi$ is associated with $\Phi$, is equivalent to deciding if two flows are isomorphic. This will never be an issue in this thesis as we all the flows we will consider are associated with the relevant derivations by construction.
+\end{remark}
+%-----------
 
 %---------------
 \begin{notation}
